# dbcli-gui

./: .gitignore  DESIGN.md  README.md  build.ts  bunfig.toml  package.json  playwright.config.ts  tsconfig.json
.github/workflows/: ci.yml
dev/: ready-line.ts  serve.ts
docs/: dbcli-gui-design.md
docs/plans/: 2026-06-08-frontend-phase-b.md  2026-06-08-phase-c-tauri-shell.md  2026-06-08-sidecar-core-loop.md  2026-06-08-sidecar-remaining-routes.md  2026-06-09-e2e-foundation.md  2026-06-09-frontend-v1x-usability.md
docs/specs/: 2026-06-08-frontend-phase-b-design.md  2026-06-08-phase-c-tauri-shell-design.md  2026-06-09-e2e-foundation-design.md  2026-06-09-frontend-v1x-usability-design.md
scripts/: make-icon.ts
shared/: errors.ts  schemas.ts
sidecar/: active-store.ts  auth.ts  config.ts  connection-pool.ts  cors.ts  dialect.ts  http.ts  index.ts  server.ts  workspaces.ts
sidecar/routes/: connections-admin.ts  connections.ts  data.ts  export.ts  query.ts  schema.ts  table-detail.ts  workspaces.ts
src/: App.tsx  index.css  index.html  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: client.ts  save-file.ts  tauri-env.ts  types.ts
src/components/: CellDetailModal.tsx  ConnectionFormModal.tsx  ContextMenu.tsx  ErrorBanner.tsx  Spinner.tsx
src/hooks/: data-edit.ts  shortcuts.ts  single-table.ts  tabs-reducer.ts  useApp.ts  useConnections.ts  useDataEdit.ts  useHistory.ts  useSidecar.ts  useTabs.ts  useTheme.ts  useWorkspaces.ts
src/views/: Editor.tsx  (+17 more)
(+100 files in other folders)
