[package]
name = "dbcli-gui"
version = "0.1.0"
edition = "2021"
description = "dbcli-gui desktop shell"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "dbcli-gui"
path = "src/main.rs"
